SERVER-64639 ThreadContext remove invariant on main thread check